logs/gdax-python-api.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/aiofiles'...
Listing './lib/python3.5/site-packages/aiofiles/threadpool'...
Listing './lib/python3.5/site-packages/aiofiles-0.3.1.dist-info'...
Listing './lib/python3.5/site-packages/aiohttp'...
Listing './lib/python3.5/site-packages/aiohttp-2.2.0.dist-info'...
Listing './lib/python3.5/site-packages/async_timeout'...
Listing './lib/python3.5/site-packages/async_timeout-1.2.1.dist-info'...
Listing './lib/python3.5/site-packages/bintrees'...
Listing './lib/python3.5/site-packages/bintrees-2.0.7.egg-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/gdax'...
Compiling './lib/python3.5/site-packages/gdax/orderbook.py'...
***   File "./lib/python3.5/site-packages/gdax/orderbook.py", line 77
    f'B {product_id} {json.dumps(book)}\n')
                                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gdax/trader.py'...
***   File "./lib/python3.5/site-packages/gdax/trader.py", line 98
    f'{k}={v}' for k, v in params_copy.items())
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/gdax_python_api-0.2.egg-info'...
Listing './lib/python3.5/site-packages/multidict'...
Listing './lib/python3.5/site-packages/multidict-3.3.2.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/yarl'...
Listing './lib/python3.5/site-packages/yarl-0.10.3.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
